start/build/.happy/s-1238639822
SyntaxError: Unexpected token, expected ( (2:6)

[0m [90m 1 | [39m[36mclass[39m [33mFraction[39m {                  [90m// Avoids floating-point trouble.[39m
[31m[1m>[22m[39m[90m 2 | [39m  int num[33m,[39m denom[33m;[39m
 [90m   | [39m      [31m[1m^[22m[39m
 [90m 3 | [39m  static int gcd(int a[33m,[39m int b) {  [90m// Greatest common divisor.[39m
 [90m 4 | [39m    [36mwhile[39m (b [33m!=[39m [35m0[39m) {
 [90m 5 | [39m      int t [33m=[39m b[33m;[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected ( (2:6)

[0m [90m 1 | [39m[36mclass[39m [33mFraction[39m {                  [90m// Avoids floating-point trouble.[39m
[31m[1m>[22m[39m[90m 2 | [39m  int num[33m,[39m denom[33m;[39m
 [90m   | [39m      [31m[1m^[22m[39m
 [90m 3 | [39m  static int gcd(int a[33m,[39m int b) {  [90m// Greatest common divisor.[39m
 [90m 4 | [39m    [36mwhile[39m (b [33m!=[39m [35m0[39m) {
 [90m 5 | [39m      int t [33m=[39m b[33m;[39m[0m

    at transpile (/Users/pengxiaolong/Project/Tys/24Points/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/Users/pengxiaolong/Project/Tys/24Points/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/pengxiaolong/Project/Tys/24Points/node_modules/happypack/lib/HappyWorker.js:32:3)